--- a/Capstone_project1/Capstone_project1_interim_report/Appendix A. Data_wrangling.ipynb
+++ b/Capstone_project1/Capstone_project1_interim_report/Appendix A. Data_wrangling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Wrangling \n",
+    "## Appendix A. Data Wrangling \n",
     "<br/>\n",
     "<b> Submission: </b>  \n",
     "Create a short document (1-2 pages) in your github describing the data wrangling steps that you undertook to clean your capstone project data set. \n",
