Made format corrections to file.

--- a/Capstone_project1/Capstone_project1_interim_report/README.ipynb
+++ b/Capstone_project1/Capstone_project1_interim_report/README.ipynb
@@ -20,18 +20,18 @@
    "source": [
     "\n",
     "## Table of contents    \n",
-    "### 1. Introduction   \n",
-    "### 2. Data overview   \n",
-    "### 3.  Machine learning approach]  \n",
-    "### 4.  Preliminary conclusions and next steps]  \n",
+    "#### 1. Introduction   \n",
+    "#### 2. Data overview   \n",
+    "#### 3.  Machine learning approach  \n",
+    "#### 4.  Preliminary conclusions and next steps   \n",
     "\n",
     "\n",
-    "## Appendix \n",
-    "### Appendix A. Technical fundamentals\n",
-    "### Appendix B. Data wrangling\n",
-    "### Appendix C. Inferential_statistics\n",
-    "### Appendix D. Machine_learning\n",
-    "### Appendix E. List of dependent files\n"
+    "### Appendix \n",
+    "#### Appendix A. Technical fundamentals\n",
+    "#### Appendix B. Data wrangling\n",
+    "#### Appendix C. Inferential statistics\n",
+    "#### Appendix D. Machine learning\n",
+    "#### Appendix E. List of dependent files\n"
    ]
   },
   {
