--- a/Capstone_project2/Capstone_project2_interim_report/Readme.Rmd
+++ b/Capstone_project2/Capstone_project2_interim_report/Readme.Rmd
@@ -1,13 +1,9 @@
 ---
 title: "An automated inventory system via a machine learning approach"
 author: "Ray Gunawidjaja"
-date: "April 19, 2018"
+date: "April 22, 2018"
 output: html_document
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 ***
 
@@ -30,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE)
 <br>
 
 **Abstract** <br>   
-Without a robust inventory management system in place, it is easy for items to be misplaced, mislabeled, stolen, etc. This, in turns, will result in financial losses in a business. I propose to use machine learning and deep learning models to automate and eliminate error in keeping track of inventory. Three approaches are explored in this work: (1) a combination of histogram oriented gradient (HOG) and support vector machine, (2) a simple neural network and convolutional neural network, and (3) a pretrained VGG model. The codes that I use are adapted from various references that are cited herein. All three approaches involve two major steps: (1) distinct features are extracted from labeled image (i.e., extraction) and (2) the distinct features are correlated to the assigned labels. The model with the best accuracy is selected and combined with an object detection algorithm. Finally, using the combination of an object recognition and an object detection algorithm, we can label and count objects in a picture. The VGG model and the final step will be presented in the upcoming final report.        
+Without a robust inventory management system in place, it is easy for items to be misplaced, mislabeled, stolen, etc. This, in turns, will result in financial losses in a business. I propose to use machine learning and deep learning models to automate and eliminate error in keeping track of inventory. Three approaches are explored in this work: (1) a combination of histogram oriented gradient (HOG) and support vector machine (SVM), (2) a simple neural network (NN) and convolutional neural network (CNN), and (3) a pretrained VGG model. The codes that I use are adapted from various references that are cited herein. All three approaches involve two major steps: (1) distinct features are extracted from labeled image (i.e., extraction) and (2) the distinct features are correlated to the assigned labels. The model with the best accuracy is selected and combined with an object detection algorithm. Finally, using the combination of an object recognition and an object detection algorithm, we can label and count objects in a picture. The VGG model and the final step will be presented in the upcoming final report.        
 
 <br>
 
