--- a/Capstone_project2/Capstone_project2_final_report/Appendix D. Pre-trained Model_VGG.ipynb
+++ b/Capstone_project2/Capstone_project2_final_report/Appendix D. Pre-trained Model_VGG.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### E. Pre-trained model: VGG\n",
+    "### D. Pre-trained model: Visual Geometry Group-16 (VGG-16)\n",
     "\n",
-    "ref.: \n",
-    "1. https://github.com/lazyprogrammer/machine_learning_examples\n",
-    "2. https://machinelearningmastery.com/use-pre-trained-vgg-model-classify-objects-photographs/"
+    "Initially assessment of the well-known pre-trained VGG16 model shows that it poorly predicts the three objects that are studied in this project (i.e., spoon, fork, and floss). The number 16 means that it consists of 16 weight layers [1]. This justifies the need to train this model. Due to its more complex architecture than the models that are dicussed in **Appendix B** and **C**, I believe that a trained VGG16 model will achieve a greater accuracy. "
    ]
   },
   {
@@ -17,8 +15,10 @@
    "source": [
     "**Table of Contents**\n",
     "\n",
-    "1. Initial Assessment\n",
-    "2. Applying a custom training dataset "
+    "1. Initial Assessment  \n",
+    "2. Applying a custom training dataset   \n",
+    "3. References  \n",
+    "4. Summary  "
    ]
   },
   {
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#initial test\n",
@@ -350,14 +352,16 @@
     "#Load and inspect training dataset\n",
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv(\"Data/combined_col.csv\")\n",
+    "df=pd.read_csv(\"Data/combined_rgb.csv\")\n",
     "df.head() #check"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=df.iloc[:,:17922].as_matrix() #change to a matrix data type\n",
@@ -379,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#split into train and test sets\n",
@@ -467,6 +473,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -738,13 +745,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3. Make predictions"
+    "#### 2.3. Make predictions\n",
+    "\n",
+    "To validate model's accuracy, I feed it with images that are randomly taken from the internet.\n",
+    "    - spoon: http://www.peterhof.cc/classic-cutlery/733-dinner-spoon-6pcs-4895170314301.html\n",
+    "    - fork: https://www.amazon.com/Hiware-12-piece-Stainless-Dinner-Cutlery/dp/B01G8HUH8S\n",
+    "    - floss: https://greenspointdental.com/flossing-step-step-guide/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#https://datascience.stackexchange.com/questions/17516/how-to-deal-with-string-labels-in-multi-class-classification-with-keras\n",
@@ -780,7 +794,7 @@
     "\n",
     "from keras.utils import np_utils\n",
     "\n",
-    "#code is taken from: https://machinelearningmastery.com/use-pre-trained-vgg-model-classify-objects-photographs/\n",
+    "#code is adapted from: https://machinelearningmastery.com/use-pre-trained-vgg-model-classify-objects-photographs/\n",
     "\n",
     "#load model\n",
     "from keras.models import load_model\n",
@@ -791,9 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -889,7 +901,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Summary\n",
+    "#### 3. References \n",
+    "    \n",
+    "1. http://www.robots.ox.ac.uk/~vgg/research/very_deep/\n",
+    "2. https://github.com/lazyprogrammer/machine_learning_examples\n",
+    "3. https://machinelearningmastery.com/use-pre-trained-vgg-model-classify-objects-photographs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Summary\n",
     "\n",
     "- Initial assessment shows that the built-in VGG model is unable to recognize any of the three objects (i.e., spoon, fork, and floss).\n",
     "- This justifies the need to re-train the model using custom datasets.\n",
@@ -915,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   },
   "widgets": {
    "state": {},
