Updated Readme file.

--- a/Capstone_project1/Capstone_project1_final_report/README.rmd
+++ b/Capstone_project1/Capstone_project1_final_report/README.rmd
@@ -33,14 +33,14 @@ output: html_document
 <i>1.1 Problem statement</i>  
 
 <p align="justify">
-Due to a rapid advancement in the fabrication of lightweight, compact, high-speed, and low-cost electronic/optoelectronic devices, the approach to using infrared spectroscopy for chemical identification is becoming widespread. For instance, using MEMS technology Si-Ware Systems can fabricate an FTIR system in a chip size module (http://www.neospectra.com/products-overview/). This is in contrast to the traditional bench-top and bulky FTIR system. While it is relatively straightforward to correlate the infrared spectra of a defined class of compounds or a pure material, the spectra obtained from an FTIR measurement are generally ambiguous. It requires trained personnel to interpret the data, the process can be tedious and prone to errors. Thus, there is a need to establish a routine algorithm that yield a reliable and consistent result. The goal of this project is to improve the accuracy of a computer based chemical characterization of materials using IR spectroscopy.  
+The idea of a portable optical sensor for chemical identification is becoming widespred. This is because the fabrication of low-cost electronic devices that are lightweight, compact, and high-speed has become possible. For example, Si-Ware Systems can fabricate an FTIR system in a chip size module (http://www.neospectra.com/products-overview/). This is in contrast to the traditional bench-top and bulky FTIR system. The infrared signal of a pure material is easy to interpret. On the other hand, the spectra of a mixture of two or more materials are generally ambiguous. It requires trained personnel to interpret the spectrum. The process can be tedious and prone to errors. Thus, there is a need to establish a routine algorithm that yield a reliable and consistent result. The goal of this project is to select a machine learning model to interpret the infrared spectra of an unknown material with a good accuracy.   
 </p>
 
 
 <i>1.2. How does it benefit the client?</i>  
 
 <p align="justify">
-The client is an FTIR spectroscopy sensor manufacturer that desires a universal method for unambiguously identifying the chemical compounds of an unknown material from the measured FTIR spectra. The conventional approach used to identify FTIR spectra is to mathematically compare the unknown spectra against all possible spectra within the database (i.e., a spectral matching approach). The reference compounds with similar spectral features to the unknown material are ranked according to their similarity index. If it is done on a defined class of material, this process is very likely to yield an accurate result. However, for an entirely unknown material it will require a trained professional to then rationalize the result. The human interference is not necessarily consistent and error-proof. The proposed approach is to utilize machine learning algorithms. A successful model is expected to yield a consistent result within minimum errors.   
+The client is an FTIR spectroscopy sensor manufacturer. The client desires a universal method for unambiguously identifying the chemical compounds of an unknown material from the measured FTIR spectra. The conventional approach used to interpret an unknown IR spectrum is to mathematically compare the unknown spectra against all possible spectra within the database (i.e., a spectral matching approach). The reference compounds with similar spectral features to the unknown material are ranked according to their similarity index. If it is done on a defined class of material, this process is very likely to yield an accurate result. However, for an entirely unknown material it will require a trained professional to then rationalize the result. The human interference is not necessarily consistent and error-proof. The proposed approach is to utilize machine learning algorithms. A successful model is expected to yield consistent results within minimum errors.   
 </p>
 
 <i>1.3. Data source</i>    
