--- a/Capstone_project1/Capstone_project1_final_report/README.rmd
+++ b/Capstone_project1/Capstone_project1_final_report/README.rmd
@@ -33,7 +33,7 @@ output: html_document
 <i>1.1 Problem statement</i>  
 
 <p align="justify">
-The idea of a portable optical sensor for chemical identification is becoming widespred. This is because the fabrication of low-cost electronic devices that are lightweight, compact, and high-speed has become possible. For example, Si-Ware Systems can fabricate an FTIR system in a chip size module (http://www.neospectra.com/products-overview/). This is in contrast to the traditional bench-top and bulky FTIR system. The infrared signal of a pure material is easy to interpret. On the other hand, the spectra of a mixture of two or more materials are generally ambiguous. It requires trained personnel to interpret the spectrum. The process can be tedious and prone to errors. Thus, there is a need to establish a routine algorithm that yield a reliable and consistent result. The goal of this project is to select a machine learning model to interpret the infrared spectra of an unknown material with a good accuracy.   
+The idea of a portable optical sensor for chemical identification is becoming widespred. This is because the fabrication of low-cost electronic devices that are lightweight, compact, and high-speed has become possible. For example, Si-Ware Systems can fabricate an infrared system in a chip size module (http://www.neospectra.com/products-overview/). This is in contrast to the traditional bench-top and bulky infrared system. The infrared signal (i.e., a spectrum) of a pure material is easy to interpret. On the other hand, the spectrum of a mixture of two or more materials is generally ambiguous. It requires a trained personnel to interpret the spectrum. The process can be tedious and prone to errors. Thus, there is a need to establish a routine algorithm that yields a reliable and consistent result. The goal of this project is to select a suitable machine learning model to interpret the infrared spectra of unknown materials with a good accuracy.   
 </p>
 
 
